--- a/recruitment-modern.html
+++ b/recruitment-modern.html
@@ -398,7 +398,7 @@
                 <!-- MRI Equipment Image -->
                 <div class="group cursor-pointer overflow-hidden rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300">
                     <div class="relative">
-                        <img src="/assets/mri-latest.png" alt="MRI検査室" class="w-full h-80 object-cover group-hover:scale-105 transition-transform duration-300 brightness-110">
+                        <img src="assets/mri-latest.png" alt="MRI検査室" class="w-full h-80 object-cover group-hover:scale-105 transition-transform duration-300 brightness-110">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/40 via-transparent to-transparent"></div>
                         <div class="absolute bottom-0 left-0 right-0 p-6 text-white">
                             <h3 class="text-2xl font-bold mb-2 drop-shadow-lg">医療機器</h3>
@@ -410,7 +410,7 @@
                 <!-- Rehabilitation Room Image -->
                 <div class="group cursor-pointer overflow-hidden rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300">
                     <div class="relative">
-                        <img src="/assets/rehab-final.png" alt="リハビリテーションルーム" class="w-full h-80 object-cover group-hover:scale-105 transition-transform duration-300 brightness-110">
+                        <img src="assets/rehab-final.png" alt="リハビリテーションルーム" class="w-full h-80 object-cover group-hover:scale-105 transition-transform duration-300 brightness-110">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/40 via-transparent to-transparent"></div>
                         <div class="absolute bottom-0 left-0 right-0 p-6 text-white">
                             <h3 class="text-2xl font-bold mb-2 drop-shadow-lg">広々としたリハビリルーム</h3>
