--- a/recruitment-modern.html
+++ b/recruitment-modern.html
@@ -145,10 +145,8 @@
                     <!-- Doctor Message Card -->
                     <div class="glass-card rounded-3xl p-8 shadow-2xl animate-float">
                         <div class="flex items-center mb-6">
-                            <div class="w-16 h-16 bg-gradient-to-br from-medical-blue to-medical-mint rounded-2xl flex items-center justify-center mr-4">
-                                <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
-                                </svg>
+                            <div class="w-16 h-16 rounded-2xl overflow-hidden mr-4">
+                                <img src="assets/doctor-nakamura-new.jpg" alt="中村健一院長" class="w-full h-full object-cover">
                             </div>
                             <div>
                                 <h3 class="text-xl font-bold text-text-dark">院長メッセージ</h3>
