--- a/recruitment-modern.html
+++ b/recruitment-modern.html
@@ -146,7 +146,7 @@
                     <div class="glass-card rounded-3xl p-8 shadow-2xl animate-float">
                         <div class="flex items-center mb-6">
                             <div class="w-16 h-16 rounded-2xl overflow-hidden mr-4">
-                                <img src="assets/doctor-nakamura-new.jpg" alt="中村健一院長" class="w-full h-full object-cover">
+                                <img src="assets/doctor-nakamura.png" alt="中村健一院長" class="w-full h-full object-cover">
                             </div>
                             <div>
                                 <h3 class="text-xl font-bold text-text-dark">院長メッセージ</h3>
