--- a/recruitment-modern.html
+++ b/recruitment-modern.html
@@ -145,8 +145,8 @@
                     <!-- Doctor Message Card -->
                     <div class="glass-card rounded-3xl p-8 shadow-2xl animate-float">
                         <div class="flex items-center mb-6">
-                            <div class="w-16 h-16 rounded-2xl overflow-hidden mr-4">
-                                <img src="assets/doctor-nakamura.png" alt="中村健一院長" class="w-full h-full object-cover">
+                            <div class="w-20 h-20 rounded-2xl overflow-hidden mr-4 border-2 border-medical-blue/20">
+                                <img src="assets/doctor-new.png" alt="中村健一院長" class="w-full h-full object-cover object-center">
                             </div>
                             <div>
                                 <h3 class="text-xl font-bold text-text-dark">院長メッセージ</h3>
