--- a/recruitment-modern.html
+++ b/recruitment-modern.html
@@ -562,46 +562,62 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-text-dark text-white py-12">
-        <div class="container mx-auto px-6">
-            <div class="grid md:grid-cols-2 gap-8">
-                <div>
-                    <div class="flex items-center space-x-3 mb-4">
-                        <div class="w-10 h-10 bg-gradient-to-br from-medical-blue to-medical-mint rounded-xl flex items-center justify-center">
-                            <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path>
-                            </svg>
+    <footer class="bg-gray-800 text-gray-400 py-12">
+        <div class="container mx-auto px-4">
+            <div class="max-w-6xl mx-auto">
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-8">
+                    <!-- Clinic Info -->
+                    <div>
+                        <div class="flex items-center mb-4">
+                            <div class="w-10 h-10 bg-blue-500 rounded-lg flex items-center justify-center mr-3">
+                                <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
+                                </svg>
+                            </div>
+                            <div>
+                                <h3 class="text-white font-bold text-lg">すこやか整形外科医院</h3>
+                                <p class="text-gray-400 text-sm">能登の地域医療を共に支える仲間募集中</p>
+                            </div>
                         </div>
-                        <div>
-                            <h3 class="text-xl font-bold">すこやか整形外科医院</h3>
-                            <p class="text-gray-300 text-sm">能登の地域医療を共に支える仲間募集中</p>
+                        <p class="text-gray-400 leading-relaxed">
+                            2026年春開業予定。地域の皆さまの健康を支え、共に歩む医療チームのメンバーを募集しています。
+                        </p>
+                    </div>
+
+                    <!-- Quick Links -->
+                    <div>
+                        <h4 class="text-white font-semibold mb-4">クイックリンク</h4>
+                        <ul class="space-y-2">
+                            <li><a href="#vision" class="hover:text-white transition-colors">私たちが目指す医療</a></li>
+                            <li><a href="#positions" class="hover:text-white transition-colors">募集職種</a></li>
+                            <li><a href="#benefits" class="hover:text-white transition-colors">福利厚生</a></li>
+                            <li><a href="#contact" class="hover:text-white transition-colors">お問い合わせ</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- Contact -->
+                    <div>
+                        <h4 class="text-white font-semibold mb-4">お問い合わせ</h4>
+                        <div class="space-y-2">
+                            <p class="flex items-center">
+                                <svg class="w-5 h-5 mr-2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 4.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
+                                </svg>
+                                <span>Email: recruit@sukoyaka-clinic.jp</span>
+                            </p>
+                            <div>
+                                <p class="font-semibold mb-1">所在地:</p>
+                                <p>2026年春 石川県能登地区に開業予定</p>
+                                <p>〒xxx-xxxx 石川県（詳細住所は決定次第公開）</p>
+                            </div>
                         </div>
                     </div>
-                    <p class="text-gray-300 leading-relaxed">
-                        2026年春開業予定。地域の皆さまの健康を支え、
-                        共に歩む医療チームのメンバーを募集しています。
-                    </p>
                 </div>
                 
-                <div>
-                    <h4 class="text-lg font-semibold mb-4">お問い合わせ</h4>
-                    <div class="space-y-3 text-gray-300">
-                        <p>
-                            <span class="font-semibold">Email:</span> recruit@sukoyaka-clinic.jp
-                        </p>
-                        <p>
-                            <span class="font-semibold">所在地:</span><br>
-                            2026年春 石川県能登地区に開業予定<br>
-                            〒xxx-xxxx 石川県（詳細住所は決定次第公開）
-                        </p>
-                    </div>
+                <!-- Copyright -->
+                <div class="mt-8 pt-8 border-t border-gray-700 text-center">
+                    <p class="text-sm text-gray-500">© 2026 すこやか整形外科医院 All Rights Reserved.</p>
                 </div>
-            </div>
-            
-            <div class="border-t border-gray-600 mt-8 pt-8 text-center">
-                <p class="text-gray-400">
-                    &copy; 2026 すこやか整形外科医院 All Rights Reserved.
-                </p>
             </div>
         </div>
     </footer>
