--- a/recruitment-modern.html
+++ b/recruitment-modern.html
@@ -93,7 +93,7 @@
     </header>
 
     <!-- Mobile Menu -->
-    <div id="mobileMenu" class="fixed inset-0 z-40 bg-black/50 backdrop-blur-sm hidden md:hidden">
+    <div id="mobileMenu" class="fixed inset-0 z-40 bg-black/50 backdrop-blur-sm hidden">
         <div class="absolute right-0 top-0 h-full w-80 bg-white shadow-xl">
             <div class="p-6">
                 <!-- Close Button -->
