--- a/recruitment-modern.html
+++ b/recruitment-modern.html
@@ -653,7 +653,7 @@
     </button>
 
     <script>
-        // Mobile menu only - exactly like recruitment-minimal.html
+        // Mobile menu with link click handling
         document.getElementById('mobileMenuButton').onclick = function() {
             document.getElementById('mobileMenu').style.display = 'block';
         };
@@ -667,6 +667,14 @@
                 this.style.display = 'none';
             }
         };
+        
+        // Close menu when clicking any link inside the menu
+        var menuLinks = document.querySelectorAll('#mobileMenu a');
+        for (var i = 0; i < menuLinks.length; i++) {
+            menuLinks[i].onclick = function() {
+                document.getElementById('mobileMenu').style.display = 'none';
+            };
+        }
     </script>
 </body>
 </html>
