Fix: Tailwind CDNにバージョン指定を追加してキャッシュ問題を解決

--- a/recruitment-modern.html
+++ b/recruitment-modern.html
@@ -6,7 +6,7 @@
     <title>採用情報 | すこやか整形外科医院 - 能登の地域医療を共に支えるスタッフ募集</title>
     <meta name="description" content="2026年春開業予定。能登の地域医瀂を20年以上支えてきた中村健一医師と共に、新しい医療の形を創造するスタッフを募集しています。">
     <link rel="icon" href="data:,">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com?v=3.4.0"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
